# web-project

./: LICENSE  README.md  pyproject.toml
docker/: Dockerfile
scripts/: start.sh
src/: __init__.py  errors.py  main.py
src/api/: __init__.py  adaptor.py  apiv1.py  health.py
src/api/middleware/: __init__.py  telemetry.py
src/app/: command.py  query.py
src/app/service/: __init__.py  admin_request_create.py  admin_request_get.py  admin_request_update.py
src/config/: __init__.py  local.toml
src/domain/: __init__.py
src/domain/admin/request/: __init__.py  request_entity.py  request_repo.py
src/infra/db/: __init__.py  custom_aiomysql.py  custom_pymysql.py
src/infra/telemetry/: __init__.py  log.py  metric.py  trace.py
tests/integration/: test_service_admin.py
